<resources>
    <string name="app_name">Shopping List</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="settingsText">Settings</string>
    <string name="shopping_list">Shopping List</string>
    <string name="welcome_text">Welcome text:</string>
    <string name="save">Save</string>
    <string name="item_name">Product name</string>
    <string name="price">Prive</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="title_activity_product_edit">ProductEditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_item_added">com.example.shoppinglist.broadcastreceiver.ITEM_ADDED</string>
    <string name="title_activity_fav_shops_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>