<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.ProductEditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ShoppingList.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ShoppingList.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_product_edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_product_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberSigned"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_edit_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/edit" />

        <Button
            android:id="@+id/btn_delete_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>