<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="60dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_new_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_new_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_new_product_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberSigned"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/add" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
